add style and links to contract address listings

--- a/.github/templates/deployed-addresses.mdx.tmpl
+++ b/.github/templates/deployed-addresses.mdx.tmpl
@@ -1,6 +1,6 @@
 ---
-title: "Contract Addresses"
-sidebarTitle: "Contract Addresses"
+title: "Deployed Addresses"
+sidebarTitle: "Deployed Addresses"
 ---
 <Tabs>
   <Tab title="[NETWORK]">
@@ -8,7 +8,7 @@ sidebarTitle: "Contract Addresses"
     
     | Name | Address |
     | :--- | :--- |
-    | `[ContractName]` | `[ADDRESS]` |
+    | `[ContractName]` | **[ADDRESS]** |
 
     ## Action Contracts
 
@@ -16,7 +16,7 @@ sidebarTitle: "Contract Addresses"
       <Tab title="[CHAIN_NAME]">
         | Name | Address |
         | :--- | :--- |
-        | `[ContractName]` | `[ADDRESS]` |
+        | `[ContractName]` | **[ADDRESS]** |
       </Tab>
       <!-- Repeat <Tab> for each chain -->
     </Tabs>
