update deployed addresses mdx template

--- a/.github/templates/deployed-addresses.mdx.tmpl
+++ b/.github/templates/deployed-addresses.mdx.tmpl
@@ -2,25 +2,25 @@
 title: "Deployed Addresses"
 sidebarTitle: "Deployed Addresses"
 ---
+
 <Tabs>
   <Tab title="[NETWORK]">
-    ## Core Contracts
-    
-    | Name | Address |
-    | :--- | :--- |
-    | `[ContractName]` | **[ADDRESS]** |
-
-    ## Action Contracts
-
     <Tabs>
       <Tab title="[CHAIN_NAME]">
+        ## Core Contracts
+        
         | Name | Address |
         | :--- | :--- |
-        | `[ContractName]` | **[ADDRESS]** |
+        | `[ContractName]` | **[ADDRESS](https://[EXPLORER_URL]/address/ADDRESS)** |
+
+        ## Action Contracts
+        
+        | Name | Address |
+        | :--- | :--- |
+        | `[ContractName]` | **[ADDRESS](https://[EXPLORER_URL]/address/ADDRESS)** |
       </Tab>
       <!-- Repeat <Tab> for each chain -->
     </Tabs>
-    
   </Tab>
-  <!-- Repeat <Tab> for both Mainnet and Testnet -->
+  <!-- Repeat <Tab> for each network -->
 </Tabs>
